# birthdays

./: .gitignore  deploy  pyproject.toml  requirements.txt
addresses/: models.py  signals.py  types.py
addresses/migrations/: 0001_initial.py  0002_address_user.py  0003_auto_20210112_2209.py
backend/addresses/: apps.py  signals.py
backend/addresses/migrations/: 0001_initial.py  0002_address_user.py
backend/birthdays/: admin.py  models.py  mutations.py  queries.py  schema.py  serializers.py  types.py  urls.py
backend/birthdays/migrations/: 0001_initial.py  0002_auto_20201127_0843.py  0002_auto_20201227_0136.py  0002_birthday_user.py  0003_auto_20201127_0918.py  0003_auto_20201222_1811.py  0004_auto_20201127_1156.py  0004_birthday_visible.py  0005_auto_20201127_1717.py  0006_auto_20201127_1718.py  0007_auto_20201127_1720.py  0008_auto_20201127_1733.py  0009_auto_20201127_1737.py  0010_auto_20201201_1653.py  (+2 more)
backend/core/: schema.py  settings.py  tasks.py  types.py  urls.py
backend/users/: manager.py  models.py  mutations.py  queries.py  types.py
backend/utils/: utils.py
birthdays/: admin.py  types.py  views.py
core/: __init__.py  celery.py  celery_setup.py  schema.py  settings.py  urls.py  utils.py
frontend/: .eslintcache  .gitignore  package-lock.json  package.json
frontend/src/: App.js  cache.js  constants.js  index.js  store.js  style.js
users/: models.py  mutations.py  types.py
users/migrations/: 0005_user_nickname.py  0006_auto_20210106_1838.py  0007_auto_20210112_0126.py  0008_auto_20210112_0200.py  0009_auto_20210112_0212.py
(+95 files in other folders)
